--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href = "https://bootswatch.com/darkly/bootstrap.min.css">
+      <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+      <script src="app/main/speech.js"></script>
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
